fix: Improve spacing between each section

--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -37,6 +37,8 @@
   --top-space-media-md-mobile: 50px;
 
   --top-space-section-md: 200px;
+
+  --bottom-space-section-s: 50px;
   --bottom-space-section-md: 200px;
 
   --bottom-space-header-md: 10px;
@@ -153,10 +155,6 @@ p {
 :focus-visible {
   outline: none;
   box-shadow: var(--focus-ring);
-}
-
-.section-space {
-  padding-block: var(--space-2xl);
 }
 
 .text-muted {
